cmake_minimum_required(VERSION 3.31)
project(Class25C C)

set(CMAKE_C_STANDARD 11)

add_executable(Class25C main.c
        mainConst.c
        mainConst.h
        simpleIntCalculator.c
        simpleIntCalculator.h
        chars.c
        chars.h
        mainOperators.c
        mainOperators.h
        L3.c
        L3.h

)
