cmake_minimum_required(VERSION 3.31)
project(Class25C C)

set(CMAKE_C_STANDARD 11)

add_executable(Class25C main.c
        mainConst.c
        mainConst.h
        simpleIntCalculator.c
        simpleIntCalculator.h
        chars.c
        chars.h
        mainOperators.c
        mainOperators.h
        L3.c
        L3.h
        L4.c
        L4.h
        mainPrintf.c
        mainPrintf.h
        L5.c
        L5.h
        L6.c
        L6.h
        mainFunctions.c
        mainFunctions.h
        L7.c
        L7.h
        L8.c
        L8.h
        ArrayUtils.c
        ArrayUtils.h
        L9.c
        L9.h
        Submarines.c
        Submarines.h
#        L10.c
#        L10.h
#        L11.c
#        L11.h
        Coffeka.c
        Coffeka.h
        Cinemafeka.c
        Cinemafeka.h
        AirAfeka.c
        AirAfeka.h
        Bitwise.c
        Bitwise.h

)
